feat(schedule) now can filter by month and dyear
